--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,107 +1,135 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+body{
+  padding:0;
+  padding:25px;
+  background-color: #111;
+  margin:0;
+  font-family: 'Bona Nova', serif;
+  /* font-family: 'Roboto', sans-serif; */
+  color:#fff;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
+#header{
+  display:flex ;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 25px;
+  border-bottom: 1px solid #333;
+  align-items: center;
+  padding-bottom: 25px;
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
+#header h1{
   margin: 0;
+  padding: 0;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
+#searchBox{
+  border-radius: 5px;
+  background-color: rgba(255,255,255,0.1);
+  display:flex ;
+  flex-direction: row;
+  height:35px;
+  overflow: hidden;
+  width: 38vw;
+
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+#searchBar{
+  display: flex;
+  color:#fff ;
+  flex:1;
+  background-color: transparent;
+  border: none;
+  padding: 0 15px;
 }
 
-a {
-  color: inherit;
+#searchBtn{
+  height:35px;
+  width:35px;
+  display: flex;
+  background-color: #999;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+#searchBtn:hover{
+  color:#111;
+  background-color: #fff;
+}
+
+#main{
+  display:flex ;
+  flex-direction: row;
+  font-family: 'Roboto', sans-serif;
+  justify-content: space-between;
+}
+
+#categories{
+  display:flex ;
+  flex-direction: column;
+  width:300px;
+  border-right: 1px solid #333;
+  gap:15px;
+  padding-right: 50px;
+}
+
+#category{
+  border-radius: 5px;
+  background-color: rgba(255,255,255,0.05);
+  padding:20px 15px;
+
+  cursor: pointer;
+}
+
+#category:hover{
+  color:#111;
+  background-color: #fff;
+}
+
+#content{
+  display: flex;
+  flex-direction: column;
+  gap:25px;
+  padding-left: 50px;
+}
+
+#articleCard{
+display: flex;
+text-decoration: none;
+flex-direction: row;
+color:#fff;
+gap:25px;
+}
+
+#articleCard :hover{
+  text-decoration: underline;
+  }
+
+#articleCard #txt{
+  display: flex;
+  flex-direction: column;
+  gap:25px;
+  }
+
+#articleCard img{
+  width: 300px;
+  border-radius: 5px;
+  height:auto;
+}
+
+#articleCard #description{
+  opacity: 0.5;
+}
+
+
+a{
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+h1,h2,h3{
+  margin:0;
+  padding:0;
 }
