--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,6 +77,7 @@ body{
 }
 
 #category{
+  text-transform: capitalize;
   border-radius: 5px;
   background-color: rgba(255,255,255,0.05);
   padding:20px 15px;
